webui/bridge/teams/teams.css
.projectTabBar {
	max-width: 1304px;
	width: 100%;
	text-align: center;
	display: inline-block;
	margin-bottom: 15px;
}

.projectTabControlsContainer {
	display: flex;
	flex-direction: row;
	flex-flow: row nowrap;
	justify-content: space-between;
}

.projectTabContainer {
	flex: 9;
	text-align: left;
}

.addViewButtonContainer {
	width: 50px;
}

.projectTab {
	padding: 6px;
	border: 1px solid #ffffff;
	margin: 4px 8px;
	display: inline-block;
	color: #ffffff;
	cursor: pointer;
	vertical-align: top;
	overflow-x: scroll;
    white-space: nowrap;
}

.removeView {
	color: #ffffff;
}

.removeView:hover {
	color: #ff0000;
}

.addView {
	color: #ffffff;
	cursor: pointer;
}

.projectTab:hover {
	background-color: #e6e6e6;
	color: #666666;
}

.projectTab input {
	color: #000000;
}

